Implemented generator tests and context infra